FIXED FLOWBITE NOT WORKING

--- a/views/layouts/boiler.ejs
+++ b/views/layouts/boiler.ejs
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="/output.css">
     <link rel="stylesheet" href="/styles/nav.css">
+    <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.css" rel="stylesheet" />
     <link crossorigin="anonymous" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">    
 </head>
 <body class="font-sans body">
@@ -16,7 +17,7 @@
         <%- body %>
     </main>
     
-<script src="../path/to/flowbite/dist/flowbite.min.js"></script>
+    <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.js"></script>
 </body>
 
 </html>
