--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,42 +1,36 @@
-<header class="nav-header">
-  <div class="logo-search">
-      <a href="/" class="logo"><i class="fas fa-home"></i></a>
-  </div>
 
-  <div class="bar2">
-      <i class="fa-solid fa-magnifying-glass"></i>
-  </div>
 
-  <div class="dashboard">
-      <li>
-          <a href="#" id="dashboard-link">Dashboard</a>
-          <span class="dropdown-arrow"><i class="fas fa-chevron-down"></i></span>
-          <ul class="dropdown-content" style="display: none;">
-              <li><a href="/upcoming"><i class="fa-solid fa-clock"></i> Upcoming Bookings</a></li>
-              <li><a href="/approved-bookings"><i class="fa-solid fa-check-circle"></i> Approved Bookings</a></li>
-              <li><a href="/history"><i class="fa-solid fa-history"></i> Booking History</a></li>
-              <li><a href="#"><i class="fa-solid fa-chart-line"></i> Analytics</a></li>
-          </ul>
-      </li>
-  </div>
-
-  <ul class="navbar">
-      <li><a href="/" class="active"><i class="ri-home-smile-2-fill"></i> Home</a></li>
-      <li><a href="/available-bookings"><i class="ri-calendar-check-fill"></i>Available Bookings</a></li>
-      <li><a href="/book-appointment"><i class="ri-function-add-fill"></i>Book Appointment</a></li>
-      <li><a href="/my-bookings"><i class="ri-bookmark-fill"></i>My Bookings</a></li>
-      <li><a href="/services"><i class="ri-service-fill"></i>All Services</a></li>
-      <li><a href="/payment"><i class="ri-wallet-line"></i>Payment</a></li>
-    </ul>
-  <div class="main">
-          <a href="/login" title="Login" class="tooltip-link">
-              <i class="ri-login-box-line"></i>
-          </a>
-          <a href="/register" title="register" class="tooltip-link"><i class="fa-solid fa-user-plus"></i></a>
-          <a href="/logout" class="logout tooltip-link" title="Logout"><i class="ri-logout-box-line"></i></a>
-          <a href="#"><img src="/images/ousainou.jpg" alt="Profile" class="profile-icon"></a>
-      <i class="ri-menu-line" id="menu-icon"></i>
-  </div>
-</header>
-<script src="/javascripts/dashDrop.js"></script>
-<script src="/javascripts/navSearchVisibility.js"></script>
+<nav class="bg-white border-gray-200 dark:bg-gray-900">
+    <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
+      <a href="https://flowbite.com/" class="flex items-center space-x-3 rtl:space-x-reverse">
+          <img src="https://flowbite.com/docs/images/logo.svg" class="h-8" alt="Flowbite Logo" />
+          <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Flowbite</span>
+      </a>
+      <button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-default" aria-expanded="false">
+          <span class="sr-only">Open main menu</span>
+          <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
+              <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
+          </svg>
+      </button>
+      <div class="hidden w-full md:block md:w-auto" id="navbar-default">
+        <ul class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
+          <li>
+            <a href="#" class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-blue-500" aria-current="page">Home</a>
+          </li>
+          <li>
+            <a href="#" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">About</a>
+          </li>
+          <li>
+            <a href="#" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Services</a>
+          </li>
+          <li>
+            <a href="#" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Pricing</a>
+          </li>
+          <li>
+            <a href="#" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  
