made the dashboard page

--- a/views/layouts/boiler.ejs
+++ b/views/layouts/boiler.ejs
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="/output.css">
     <link rel="stylesheet" href="/styles/nav.css">
     <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <link rel="stylesheet" href="/styles/graph.css">
     <link crossorigin="anonymous" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">    
 </head>
 <body class="font-sans body">
