--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -46,7 +46,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#"
+                    <a href="/bookings/allUsers"
                         class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
                         <i class="ri-group-line"></i>
                         <span class="flex-1 ms-3 whitespace-nowrap">Users</span>
@@ -68,7 +68,7 @@
                 </li>
 
                 <li>
-                    <a href="#"
+                    <a href="/api/auth/login"
                         class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
                         <i class="ri-login-box-line"></i>
                         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -78,7 +78,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#"
+                    <a href="/api/auth/register"
                         class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
                         <i class="ri-user-add-line"></i>
                         <span class="flex-1 ms-3 whitespace-nowrap">Sign Up</span>
