--- a/views/pages/showUsers.ejs
+++ b/views/pages/showUsers.ejs
@@ -23,6 +23,13 @@
 
             <ul class="space-y-2 font-medium">
                 <li>
+                    <a href="/bookings"
+                        class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
+                        <i class="ri-dashboard-line"></i>
+                        <span class="flex-1 ms-3 whitespace-nowrap">Dashboard</span>
+                    </a>
+                </li>
+                <li>
                     <a href="#"
                         class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
                         <i class="ri-line-chart-line"></i>
@@ -43,20 +50,6 @@
                         <span class="flex-1 ms-3 whitespace-nowrap">Notifications</span>
                         <span
                             class="inline-flex items-center justify-center w-3 h-3 p-3 ms-3 text-sm font-medium text-blue-800 bg-blue-100 rounded-full dark:bg-blue-900 dark:text-blue-300">3</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="/bookings/allUsers"
-                        class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
-                        <i class="ri-group-line"></i>
-                        <span class="flex-1 ms-3 whitespace-nowrap">Users</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="#"
-                        class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
-                        <i class="ri-shield-check-line"></i> <span class="flex-1 ms-3 whitespace-nowrap">User Roles &
-                            Permissions</span>
                     </a>
                 </li>
                 <li>
@@ -87,3 +80,31 @@
             </ul>
         </div>
     </aside>
+
+
+    <div class="p-4 sm:ml-64">
+        <div class="p-4 border-2 border-gray-200 border-dashed rounded-lg dark:border-gray-700">
+
+            <!-- Section: Pending and Approved Bookings -->
+            <div class="grid grid-cols-1 md:grid-cols-1 lg:grid-cols-2 gap-4 mb-4">
+                <div class="testimonial-card flex flex-col items-center text-center p-6 bg-white rounded-lg shadow-md">
+                    <img crossorigin="anonymous"
+                        src="https://media.istockphoto.com/id/1364917563/photo/businessman-smiling-with-arms-crossed-on-white-background.jpg?s=612x612&w=0&k=20&c=NtM9Wbs1DBiGaiowsxJY6wNCnLf0POa65rYEwnZymrM="
+                        alt="Testimonial 2" class="w-16 h-16 rounded-full object-cover mb-5 shadow-md">
+                    <p class="text-lg italic text-gray-600 mb-4">❝Mike S❞</p>
+                    <p class="text-lg italic text-gray-600 mb-4">Date Registered: 2-05-2007</p>
+                    <p class="text-gray-800 font-semibold">— Admin.</p>
+                </div>
+
+                <div class="testimonial-card flex flex-col items-center text-center p-6 bg-white rounded-lg shadow-md">
+                    <img crossorigin="anonymous"
+                        src="https://media.istockphoto.com/id/1311957094/photo/handsome-smiling-young-man-with-crossed-arms-portrait.jpg?s=612x612&w=0&k=20&c=zALF0xV8gL-W9IooXcbEE95aejQhYYkBslwjPMqlUxA="
+                        alt="Testimonial 1" class="w-16 h-16 rounded-full object-cover mb-5 shadow-md">
+                    <p class="text-lg italic text-gray-600 mb-4">❝John D❞</p>
+                    <p class="text-lg italic text-gray-600 mb-4">Date Registered: 12-06-2001</p>
+                    <p class="text-gray-800 font-semibold">— General Manager.</p>
+                </div>
+            </div>
+
+        </div>
+    </div>
