SWITCHED FROM TOKEN BASED TO SESSION BASE AUTHENTICATIO

--- a/views/auths/register.ejs
+++ b/views/auths/register.ejs
@@ -6,7 +6,7 @@
             <div class="flex justify-center">
                 <img src="https://codersclutch.com/wp-content/uploads/2024/05/cropped-coders-logo.png" alt="Sign Up Image" class="max-w-xs">
             </div>
-            <form class="space-y-4 md:space-y-6" novalidate class="validated-form">
+            <form class="validated-form space-y-4 md:space-y-6" action="/register" method="POST" novalidate>
                 <div>
                     <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Your email</label>
                     <input type="email" name="email" id="email" class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="name@gmail.com" required>
@@ -22,7 +22,7 @@
                 <button type="submit" class="w-full text-black bg-blue-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">Sign up</button>
 
                 <p class="text-sm text-gray-500 dark:text-gray-400">
-                    Already have an account? <a href="/api/auth/login" class="font-medium text-blue-700 hover:underline dark:text-blue-500">Login</a>
+                    Already have an account? <a href="/login" class="font-medium text-blue-700 hover:underline dark:text-blue-500">Login</a>
                 </p>
             </form>
         </div>
