--- a/views/auths/login.ejs
+++ b/views/auths/login.ejs
@@ -26,7 +26,7 @@
                     Login
                 </button>
                 <p class="text-sm text-gray-500 dark:text-gray-400">
-                    Don’t have an account yet? <a href="/api/auth/register" class="font-medium text-blue-700 hover:underline dark:text-blue-500">Sign up</a>
+                    Don’t have an account yet? <a href="/register" class="font-medium text-blue-700 hover:underline dark:text-blue-500">Sign up</a>
                 </p>
             </form>
         </div>
