--- a/views/pages/pending.ejs
+++ b/views/pages/pending.ejs
@@ -104,7 +104,7 @@
 
             <!-- Section: Pending and Approved Bookings -->
             <div class="grid grid-cols-1 md:grid-cols-1 lg:grid-cols-2 gap-4 mb-4">
-                <a href="#"
+                <a href="/bookings/pending"
                     class="flex flex-col items-center justify-center px-4 py-6 rounded bg-gray-50 dark:bg-gray-800">
                     <p class="text-md font-semibold text-gray-600 dark:text-black flex items-center gap-2">
                         <i class="ri-hourglass-line text-orange-500 pr-3 text-xl"></i> Pending Bookings
