ADDED FLASH MESSAGES AND CONNECTED THE USERS SHOW PAGES WITH THE DATABASE, AND ALSO CONNECTED THE BOOKINGS TO THE BACKEND

--- a/views/layouts/boiler.ejs
+++ b/views/layouts/boiler.ejs
@@ -16,6 +16,7 @@
 <body class="font-sans body">
     <%- include('../partials/navbar') %>
     <main>
+        <%- include('../partials/flash')%>
         <%- body %>
     </main>
     
