--- a/views/pages/pending.ejs
+++ b/views/pages/pending.ejs
@@ -91,7 +91,7 @@
                     </a>
                 </li>
                 <% } %>
-                <% if(currentUser) { %>
+                <% if(!currentUser) { %>
                 <li>
                     <a href="/register"
                         class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
